<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_man"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.silver.danhba.MainActivity">
    <EditText
        android:id="@+id/edt_name"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:maxLength="11"
        android:id="@+id/edt_number"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/gi_i_ti_nh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/rbtn_nam"
            android:text="@string/nam"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_nu"
            android:text="@string/n"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <Button
        android:onClick="addContact"
        android:id="@+id/btn_them_lien_he"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_margin="16dp"
        android:background="@color/colorHong"
        android:layout_gravity="center"
        android:text="@string/th_m_li_n_h"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lv_lien_he"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>
